// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextCopy /> should match snapshot 1`] = `
<div
  className="sc-bxivhb jnalPG"
>
  <span
    className="sc-bwzfXH uTxCW k-u-line-height-normal k-u-size-micro k-u-weight-light sc-ifAKCX JcGon"
    onClick={[Function]}
  >
    <span>
      Text To Copy
    </span>
  </span>
  <div
    aria-hidden={true}
    className="sc-EHOje dwKMm"
    onClick={[Function]}
  >
    <svg
      height="22"
      viewBox="0 0 22 22"
      width="22"
      xmlns="http://www.w3.org/2000/svg"
    >
      
      <path
        d="M21.607 6.05l-7.071 7.071L12.414 11 11 12.414l2.121 2.122-7.07 7.07L.392 15.95l7.071-7.071L9.586 11 11 9.586 8.879 7.464l7.07-7.07 5.658 5.656zm-11.314 8.486l-.707-.708-1.414 1.415-1.415-1.415 1.415-1.414-.708-.707-4.242 4.243 2.828 2.828 4.243-4.242zm8.485-8.486L15.95 3.222l-4.243 4.242.707.708 1.414-1.415 1.415 1.415-1.415 1.414.708.707 4.242-4.243z"
        fill="#000"
      />
    </svg>
  </div>
</div>
`;

exports[`<TextCopy /> should match snapshot with button text 1`] = `
<div
  className="sc-bxivhb iGiqAw"
>
  <span
    className="k-u-a11y-visuallyHidden"
  >
    This is a description
  </span>
  <span
    className="sc-bwzfXH uTxCW k-u-line-height-normal k-u-size-micro k-u-weight-light sc-ifAKCX ivCvQq"
    onClick={[Function]}
  >
    <span>
      Text To Copy
    </span>
  </span>
  <button
    aria-label={[Function]}
    className="sc-htpNat kcdRic"
    onClick={[Function]}
    type="button"
  >
    Button text
  </button>
</div>
`;

exports[`<TextCopy /> should match snapshot with description 1`] = `
<div
  className="sc-bxivhb jnalPG"
>
  <span
    className="k-u-a11y-visuallyHidden"
  >
    This is a description
  </span>
  <span
    className="sc-bwzfXH uTxCW k-u-line-height-normal k-u-size-micro k-u-weight-light sc-ifAKCX JcGon"
    onClick={[Function]}
  >
    <span>
      Text To Copy
    </span>
  </span>
  <div
    aria-hidden={true}
    className="sc-EHOje dwKMm"
    onClick={[Function]}
  >
    <svg
      height="22"
      viewBox="0 0 22 22"
      width="22"
      xmlns="http://www.w3.org/2000/svg"
    >
      
      <path
        d="M21.607 6.05l-7.071 7.071L12.414 11 11 12.414l2.121 2.122-7.07 7.07L.392 15.95l7.071-7.071L9.586 11 11 9.586 8.879 7.464l7.07-7.07 5.658 5.656zm-11.314 8.486l-.707-.708-1.414 1.415-1.415-1.415 1.415-1.414-.708-.707-4.242 4.243 2.828 2.828 4.243-4.242zm8.485-8.486L15.95 3.222l-4.243 4.242.707.708 1.414-1.415 1.415 1.415-1.415 1.414.708.707 4.242-4.243z"
        fill="#000"
      />
    </svg>
  </div>
</div>
`;

exports[`<TextCopy /> should match snapshot with one line forced 1`] = `
<div
  className="sc-bxivhb jnalPG"
>
  <span
    className="k-u-a11y-visuallyHidden"
  >
    This is a description
  </span>
  <span
    className="sc-bwzfXH uTxCW k-u-line-height-normal k-u-size-micro k-u-weight-light sc-ifAKCX etcZRR"
    onClick={[Function]}
  >
    <span>
      Text To Copy
    </span>
  </span>
  <div
    aria-hidden={true}
    className="sc-EHOje dwKMm"
    onClick={[Function]}
  >
    <svg
      height="22"
      viewBox="0 0 22 22"
      width="22"
      xmlns="http://www.w3.org/2000/svg"
    >
      
      <path
        d="M21.607 6.05l-7.071 7.071L12.414 11 11 12.414l2.121 2.122-7.07 7.07L.392 15.95l7.071-7.071L9.586 11 11 9.586 8.879 7.464l7.07-7.07 5.658 5.656zm-11.314 8.486l-.707-.708-1.414 1.415-1.415-1.415 1.415-1.414-.708-.707-4.242 4.243 2.828 2.828 4.243-4.242zm8.485-8.486L15.95 3.222l-4.243 4.242.707.708 1.414-1.415 1.415 1.415-1.415 1.414.708.707 4.242-4.243z"
        fill="#000"
      />
    </svg>
  </div>
</div>
`;
